gcc/testsuite/rust/rustc/ui/for/for-loop-type-error.rs
pub fn main() {
    let x = () + (); // { dg-error ".E0369." "" { target *-*-* } }

    // this shouldn't have a flow-on error:
    for _ in x {}
}

